--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -57,6 +57,10 @@
   .animate-fadeIn-without-group {
     @apply opacity-0 hover:opacity-100 transition-base;
   }
+
+  .blog-content p {
+    @apply !leading-[23px] text-[#ffffff99] text-xs md:text-sm
+  }
 }
 
 @layer utilities {
