--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -47,7 +47,7 @@
   }
 
   .wide {
-    @apply w-full block max-w-[1300px] mx-auto px-8;
+    @apply w-full block max-w-[1300px] mx-auto px-8 max-md:px-5;
   }
 
   .animate-fadeIn-have-group {
