--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,25 +5,25 @@
 /* defined font-face */
 @font-face {
   font-family: roboto;
-  src: url("../assets/fonts/Roboto-Light.ttf");
+  src: local("sans-serif"), url("../assets/fonts/Roboto-Light.ttf");
   font-weight: 300;
 }
 
 @font-face {
   font-family: roboto;
-  src: url("../assets/fonts/Roboto-Regular.ttf");
+  src: local("sans-serif"), url("../assets/fonts/Roboto-Regular.ttf");
   font-weight: 400;
 }
 
 @font-face {
   font-family: roboto;
-  src: url("../assets/fonts/Roboto-Medium.ttf");
+  src: local("sans-serif"), url("../assets/fonts/Roboto-Medium.ttf");
   font-weight: 500;
 }
 
 @font-face {
   font-family: roboto;
-  src: url("../assets/fonts/Roboto-Bold.ttf");
+  src: local("sans-serif"), url("../assets/fonts/Roboto-Bold.ttf");
   font-weight: 700;
 }
 
